--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ aiogram = "^3.14.0"
 httpx = "^0.27.2"
 pre-commit = "^4.0.1"
 black = "^24.10.0"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
